samples/_failures_safe/1761203224_f5be8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63264e61.c: In function ‘main’:
./samples/SAFE/__tmp_63264e61.c:147:5: error: expected expression at end of input
  147 |     switch (
      |     ^~~~~~
./samples/SAFE/__tmp_63264e61.c:147:5: error: expected declaration or statement at end of input
